Notes/12/java-gtk/dialog/infer-out/logs
[70317][      debug] Loading models took 27.58ms
[70318][      debug] Sqlite write daemon: starting up
[70318][      debug] Sqlite write daemon: set up complete, waiting for connections
[70317][environment] CWD = /home/preston/Documents/Year 2/cse1325-prof/12/java-gtk/dialog
[70317][environment] No .inferconfig file found
[70317][environment] Project root = /home/preston/Documents/Year 2/cse1325-prof/12/java-gtk/dialog
[70317][environment] INFER_ARGS =   @/tmp/args.tmp.9bfdaa
[70317][environment] command line arguments:   infer run -- javac Hello.java
[70317][environment] Available memory at startup: 9864 MB
[70317][environment] Active checkers: self-in-block (C/C++/ObjC), starvation (C/C++/ObjC, Java), uninit (C/C++/ObjC), siof (C/C++/ObjC), racerd (C/C++/ObjC, Java), liveness (C/C++/ObjC), inefficient-keyset-iterator (Java), fragment-retains-view (Java), biabduction (C/C++/ObjC, Java)
[70317][environment] Scheduler: file
[70317][environment] Cores used: 4
[70317][environment] Infer version v1.0.0
[70317][environment] Copyright 2009 - present Facebook. All Rights Reserved.
[70317][environment] 
[70317][   progress] Capturing in javac mode...
[70317][      debug] Current working directory: '/home/preston/Documents/Year 2/cse1325-prof/12/java-gtk/dialog'
[70317][      debug] Trying to execute: javac '-J-Duser.language=en' '@/home/preston/Documents/Year 2/cse1325-prof/12/java-gtk/dialog/infer-out/tmp/javac_args.tmp.b3a5bb' 2>'/home/preston/Documents/Year 2/cse1325-prof/12/java-gtk/dialog/infer-out/tmp/javac.tmp.e2290e.out'
[70317][      debug] *** Failed: exited with code 1!
[70317][      debug] 
[70317][      debug] Trying to execute: javac '@/home/preston/Documents/Year 2/cse1325-prof/12/java-gtk/dialog/infer-out/tmp/javac_args.tmp.b3a5bb' 2>'/home/preston/Documents/Year 2/cse1325-prof/12/java-gtk/dialog/infer-out/tmp/javac.tmp.e2290e.out'
[70317][   user err] 
*** Failed to execute compilation command: exited with code 1
*** Command: javac '@/home/preston/Documents/Year 2/cse1325-prof/12/java-gtk/dialog/infer-out/tmp/javac_args.tmp.b3a5bb'
*** Output:
[parsing started SimpleFileObject[/home/preston/Documents/Year 2/cse1325-prof/12/java-gtk/dialog/Hello.java]]
[parsing completed 15ms]
[loading /modules/jdk.sctp/module-info.class]
[loading /modules/java.desktop/module-info.class]
[loading /modules/jdk.internal.opt/module-info.class]
[loading /modules/jdk.internal.vm.compiler.management/module-info.class]
[loading /modules/jdk.naming.rmi/module-info.class]
[loading /modules/jdk.crypto.cryptoki/module-info.class]
[loading /modules/jdk.net/module-info.class]
[loading /modules/java.prefs/module-info.class]
[loading /modules/java.instrument/module-info.class]
[loading /modules/jdk.management.agent/module-info.class]
[loading /modules/jdk.zipfs/module-info.class]
[loading /modules/java.security.jgss/module-info.class]
[loading /modules/jdk.accessibility/module-info.class]
[loading /modules/java.xml/module-info.class]
[loading /modules/jdk.localedata/module-info.class]
[loading /modules/jdk.jshell/module-info.class]
[loading /modules/java.datatransfer/module-info.class]
[loading /modules/jdk.scripting.nashorn/module-info.class]
[loading /modules/jdk.jconsole/module-info.class]
[loading /modules/java.logging/module-info.class]
[loading /modules/java.sql.rowset/module-info.class]
[loading /modules/jdk.jdeps/module-info.class]
[loading /modules/jdk.internal.le/module-info.class]
[loading /modules/java.compiler/module-info.class]
[loading /modules/jdk.jlink/module-info.class]
[loading /modules/java.management/module-info.class]
[loading /modules/jdk.rmic/module-info.class]
[loading /modules/jdk.naming.ldap/module-info.class]
[loading /modules/jdk.compiler/module-info.class]
[loading /modules/jdk.unsupported/module-info.class]
[loading /modules/jdk.pack/module-info.class]
[loading /modules/jdk.jsobject/module-info.class]
[loading /modules/java.xml.crypto/module-info.class]
[loading /modules/jdk.internal.jvmstat/module-info.class]
[loading /modules/jdk.internal.ed/module-info.class]
[loading /modules/jdk.hotspot.agent/module-info.class]
[loading /modules/jdk.jstatd/module-info.class]
[loading /modules/jdk.jcmd/module-info.class]
[loading /modules/jdk.attach/module-info.class]
[loading /modules/jdk.jdwp.agent/module-info.class]
[loading /modules/jdk.management/module-info.class]
[loading /modules/java.rmi/module-info.class]
[loading /modules/jdk.security.jgss/module-info.class]
[loading /modules/java.management.rmi/module-info.class]
[loading /modules/jdk.jartool/module-info.class]
[loading /modules/jdk.xml.dom/module-info.class]
[loading /modules/java.sql/module-info.class]
[loading /modules/java.transaction.xa/module-info.class]
[loading /modules/java.se/module-info.class]
[loading /modules/jdk.scripting.nashorn.shell/module-info.class]
[loading /modules/jdk.internal.vm.compiler/module-info.class]
[loading /modules/jdk.unsupported.desktop/module-info.class]
[loading /modules/jdk.naming.dns/module-info.class]
[loading /modules/java.smartcardio/module-info.class]
[loading /modules/jdk.crypto.ec/module-info.class]
[loading /modules/java.net.http/module-info.class]
[loading /modules/jdk.editpad/module-info.class]
[loading /modules/jdk.charsets/module-info.class]
[loading /modules/java.security.sasl/module-info.class]
[loading /modules/java.scripting/module-info.class]
[loading /modules/jdk.management.jfr/module-info.class]
[loading /modules/jdk.jfr/module-info.class]
[loading /modules/java.naming/module-info.class]
[loading /modules/java.base/module-info.class]
[loading /modules/jdk.aot/module-info.class]
[loading /modules/jdk.httpserver/module-info.class]
[loading /modules/jdk.javadoc/module-info.class]
[loading /modules/jdk.security.auth/module-info.class]
[loading /modules/jdk.dynalink/module-info.class]
[loading /modules/jdk.jdi/module-info.class]
[loading /modules/jdk.internal.vm.ci/module-info.class]
[search path for source files: .]
[search path for class files: /usr/lib/jvm/java-11-openjdk-amd64/lib/modules,.]
[loading /modules/java.base/java/lang/Object.class]
[loading /modules/java.base/java/lang/String.class]
Hello.java:1: error: package org.gnome.gtk does not exist
import org.gnome.gtk.*;
^
[loading /modules/java.base/java/lang/Deprecated.class]
[loading /modules/java.base/java/lang/annotation/Retention.class]
[loading /modules/java.base/java/lang/annotation/RetentionPolicy.class]
[loading /modules/java.base/java/lang/annotation/Target.class]
[loading /modules/java.base/java/lang/annotation/ElementType.class]
[checking Hello]
[loading /modules/java.base/java/io/Serializable.class]
[loading /modules/java.base/java/lang/AutoCloseable.class]
Hello.java:5: error: cannot find symbol
        Gtk.init(args);  // Initialize Gtk+
        ^
  symbol:   variable Gtk
  location: class Hello
Hello.java:6: error: cannot find symbol
        MessageDialog dialog = new MessageDialog(null, false, MessageType.INFO, ButtonsType.OK_CANCEL, "Hello, world!");
        ^
  symbol:   class MessageDialog
  location: class Hello
Hello.java:6: error: cannot find symbol
        MessageDialog dialog = new MessageDialog(null, false, MessageType.INFO, ButtonsType.OK_CANCEL, "Hello, world!");
                                   ^
  symbol:   class MessageDialog
  location: class Hello
Hello.java:6: error: cannot find symbol
        MessageDialog dialog = new MessageDialog(null, false, MessageType.INFO, ButtonsType.OK_CANCEL, "Hello, world!");
                                                              ^
  symbol:   variable MessageType
  location: class Hello
Hello.java:6: error: cannot find symbol
        MessageDialog dialog = new MessageDialog(null, false, MessageType.INFO, ButtonsType.OK_CANCEL, "Hello, world!");
                                                                                ^
  symbol:   variable ButtonsType
  location: class Hello
[total 208ms]
6 errors

*** Infer needs a working compilation command to run.

[70317][   user err] Raised at Stdlib__buffer.add_channel in file "buffer.ml", line 273, characters 18-35
Called from Stdio__In_channel.input_all.loop in file "src/in_channel.ml", line 44, characters 4-47
Called from Stdio__In_channel.input_all in file "src/in_channel.ml", line 47, characters 6-13

[70318][      debug] Sqlite write daemon: terminating
